--- a/index.html
+++ b/index.html
@@ -1,23 +1,103 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <!--<html class="no-js">--> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Technical Document</title>
-        <meta name="description" content="Technical Document">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-      <div id="main">
+<html lang="en">
 
-      </div>
-        <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
-           
-               
-        </script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Technical Document</title>
+    <meta name="description" content="Technical Document">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <nav id="navbar">
+        <header id="navBarHeader">This is my navbar header</header>
+        <div>
+            <ul>
+                <li><a href="#Basic_Shell_Commands" class="nav-link">Basic Shell Commands</a></li>
+                <li><a href="#Directories" class="nav-link">Directories</a></li>
+                <li><a href="#File_Opperations" class="nav-link">File Opperations</a></li>
+                <li><a href="#File_Examination" class="nav-link">File Examination</a></li>
+                <li><a href="#File_Permissions" class="nav-link">File Permissions</a></li>
+                <li><a href="#Process_Managment_and_System_Info" class="nav-link">Process Managment and System Info</a>
+                </li>
+                <li><a href="#Text_Editors" class="nav-link">Text Editors</a></li>
+                <li><a href="#Regular_Expressions" class="nav-link">Regular Expressions</a></li>
+                <li><a href="#Shell_Scripting" class="nav-link">Shell Scripting</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main id="main-doc">
+        <section class="main-section" id="Basic_Shell_Commands">
+            <header>Basic Shell Commands</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="Directories">
+            <header>Directories</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="File_Opperations">
+            <header>File Opperations</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="File_Examination">
+            <header>File Examination</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="File_Permissions">
+            <header>File Permissions</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="Process_Managment_and_System_Info">
+            <header>Process Managment and System Info</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="Text_Editors">
+            <header>Text Editors </header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="Regular_Expressions">
+            <header>Regular Expressions</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+        <section class="main-section" id="Shell_Scripting">
+            <header>Shell Scripting</header>
+            <p>
+                <li>a list</li>
+            </p>
+            <code>some code</code>
+        </section>
+    </main>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
+
+
+    </script>
+</body>
+
 </html>
