--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
 
 <body>
     <nav id="navbar">
-        <header id="navBarHeader">This is my navbar header</header>
-        <div>
-            <ul>
-                <li><a href="#Basic_Shell_Commands" class="nav-link">Basic Shell Commands</a></li>
-                <li><a href="#Directories" class="nav-link">Directories</a></li>
-                <li><a href="#File_Opperations" class="nav-link">File Opperations</a></li>
-                <li><a href="#File_Examination" class="nav-link">File Examination</a></li>
-                <li><a href="#File_Permissions" class="nav-link">File Permissions</a></li>
-                <li><a href="#Process_Managment_and_System_Info" class="nav-link">Process Managment and System Info</a>
-                </li>
-                <li><a href="#Text_Editors" class="nav-link">Text Editors</a></li>
-                <li><a href="#Regular_Expressions" class="nav-link">Regular Expressions</a></li>
-                <li><a href="#Shell_Scripting" class="nav-link">Shell Scripting</a></li>
-            </ul>
-        </div>
+        <header id="navBarHeader">Linux Commands</header>
+        <ul>
+            <li><a href="#Basic_Shell_Commands" class="nav-link">Basic Shell Commands</a></li>
+            <li><a href="#Directories" class="nav-link">Directories</a></li>
+            <li><a href="#File_Opperations" class="nav-link">File Opperations</a></li>
+            <li><a href="#File_Examination" class="nav-link">File Examination</a></li>
+            <li><a href="#File_Permissions" class="nav-link">File Permissions</a></li>
+            <li><a href="#Process_Managment_and_System_Info" class="nav-link">Process Managment and System Info</a>
+            </li>
+            <li><a href="#Text_Editors" class="nav-link">Text Editors</a></li>
+            <li><a href="#Regular_Expressions" class="nav-link">Regular Expressions</a></li>
+            <li><a href="#Shell_Scripting" class="nav-link">Shell Scripting</a></li>
+        </ul>
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Basic_Shell_Commands">
@@ -93,7 +91,6 @@
             <code>some code</code>
         </section>
     </main>
-
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
 
 
