--- a/index.html
+++ b/index.html
@@ -12,88 +12,260 @@
 
 <body>
     <nav id="navbar">
-        <header id="navBarHeader">Linux Commands</header>
+        <header id="navBarHeader">Programming in C</header>
         <ul>
-            <li><a href="#Basic_Shell_Commands" class="nav-link">Basic Shell Commands</a></li>
-            <li><a href="#Directories" class="nav-link">Directories</a></li>
-            <li><a href="#File_Opperations" class="nav-link">File Opperations</a></li>
-            <li><a href="#File_Examination" class="nav-link">File Examination</a></li>
-            <li><a href="#File_Permissions" class="nav-link">File Permissions</a></li>
-            <li><a href="#Process_Managment_and_System_Info" class="nav-link">Process Managment and System Info</a>
+            <li><a href="#Introduction" class="nav-link">Introduction</a></li>
+            <li><a href="#Hello_World" class="nav-link">Hello World</a></li>
+            <li><a href="#Variables" class="nav-link">Variables</a></li>
+            <li><a href="#Data_Types" class="nav-link">Data Types</a></li>
+            <li><a href="#Printf" class="nav-link">Printf</a></li>
+            <li><a href="#Working_With_Numbers" class="nav-link">Working With Numbers</a>
             </li>
-            <li><a href="#Text_Editors" class="nav-link">Text Editors</a></li>
-            <li><a href="#Regular_Expressions" class="nav-link">Regular Expressions</a></li>
-            <li><a href="#Shell_Scripting" class="nav-link">Shell Scripting</a></li>
+            <li><a href="#Comments" class="nav-link">Comments</a></li>
+            <li><a href="#Constants" class="nav-link">Constants</a></li>
+            <li><a href="#Getting_User_Input" class="nav-link">Getting User Input</a></li>
+            <li><a href="#Arrays" class="nav-link">Arrays</a></li>
+            <li><a href="#Functions" class="nav-link">Functions</a></li>
+            <li><a href="#Return_Statements" class="nav-link">Return Statements</a></li>
+            <li><a href="#If_Statements" class="nav-link">If Statements</a></li>
+            <li><a href="#Switch_Statements" class="nav-link">Switch Statements</a></li>
+            <li><a href="#Structs" class="nav-link">Structs</a></li>
+            <li><a href="#While_Loops" class="nav-link">While Loops</a></li>
+            <li><a href="#For_Loops" class="nav-link">For Loops</a></li>
+            <li><a href="#2D_Arrays_&_Nested_Loops" class="nav-link">2D Arrays & Nested Loops</a></li>
+            <li><a href="#Memory_Addresses" class="nav-link">Memory Addresses</a></li>
+            <li><a href="#Pointers" class="nav-link">Pointers</a></li>
+            <li><a href="#Dereferencing_Pointers" class="nav-link">Dereferencing Pointers</a></li>
+            <li><a href="#Writing_Files" class="nav-link">Writing Files</a></li>
+            <li><a href="#Reading_Files" class="nav-link">Reading Files</a></li>
+            <li><a href="#Project_Time_Building_a_Calculator" class="nav-link">Project Time Building a Calculator</a>
+            </li>
         </ul>
     </nav>
     <main id="main-doc">
-        <section class="main-section" id="Basic_Shell_Commands">
-            <header>Basic Shell Commands</header>
+        <section class="main-section" id="Introduction">
+            <header>Introduction</header>
+            <h2>Commands</h2>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">C is one of the oldest programing languages around.</li>
+                <li class="codeDescription">A lot of Modern Programming languages are actually based off of C.</li>
+                <li class="codeDescription">This Document will give you the basics of C programming so you can write
+                    your own C programns.</li>
+                <li class="codeDescription">You will need a complier for you C programs to work, I prefer using Code
+                    blocks as it is very user friendly.</li>
+                <li class="codeDescription">You can download it
+                    <a href="http://www.codeblocks.org/" alt="link to code blocks website">here</a>.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="Directories">
-            <header>Directories</header>
+        <section class="main-section" id="Hello_World">
+            <header>Hello World</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="File_Opperations">
-            <header>File Opperations</header>
+        <section class="main-section" id="Variables">
+            <header>Variables</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="File_Examination">
-            <header>File Examination</header>
+        <section class="main-section" id="Data_Types">
+            <header>Data Types</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="File_Permissions">
-            <header>File Permissions</header>
+        <section class="main-section" id="Printf">
+            <header>Printf</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="Process_Managment_and_System_Info">
-            <header>Process Managment and System Info</header>
+        <section class="main-section" id="Working_With_Numbers">
+            <header>Working With Numbers</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="Text_Editors">
-            <header>Text Editors </header>
+        <section class="main-section" id="Comments">
+            <header>Comments</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="Regular_Expressions">
-            <header>Regular Expressions</header>
+        <section class="main-section" id="Constants">
+            <header>Constants</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
         </section>
-        <section class="main-section" id="Shell_Scripting">
-            <header>Shell Scripting</header>
+        <section class="main-section" id="Getting_User_Input">
+            <header>Getting User Input</header>
+            <h2>Command</h2>
+            <code>clear</code>
             <p>
-                <li>a list</li>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
             </p>
-            <code>some code</code>
+        </section>
+        <section class="main-section" id="Arrays">
+            <header>Arrays</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Functions">
+            <header>Functions</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Return_Statements">
+            <header>Return Statments</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="If_Statements">
+            <header>If Statments</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Switch_Statements">
+            <header>Switch Statments</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Structs">
+            <header>Structs</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="While_Loops">
+            <header>While Loops</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="For_Loops">
+            <header>For Loops</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="2D_Arrays_&_Nested_Loops">
+            <header>2D Arrays & Nested Loops</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Memory_Addresses">
+            <header>Memory Addresses</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Pointers">
+            <header>Pointers</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Dereferencing_Pointers">
+            <header>Dereferencing Pointers</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Writing_Files">
+            <header>Writing Files</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Reading_Files">
+            <header>Reading Files</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
+        </section>
+        <section class="main-section" id="Project_Time_Building_a_Calculator">
+            <header>Project Time Building a Calculator</header>
+            <h2>Command</h2>
+            <code>clear</code>
+            <p>
+                <li class="codeDescription">Clears out all previous commands from the terminal crl+l is also a shortcut
+                    key for this.</li>
+            </p>
         </section>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
-
-
     </script>
 </body>
 
