--- a/index.html
+++ b/index.html
@@ -37,20 +37,23 @@
             <li><a href="#Dereferencing_Pointers" class="nav-link">Dereferencing Pointers</a></li>
             <li><a href="#Writing_Files" class="nav-link">Writing Files</a></li>
             <li><a href="#Reading_Files" class="nav-link">Reading Files</a></li>
-            <li><a href="#Building_a_Calculator" class="nav-link">Building a Calculator</a>
+            <li><a href="#Project_Time_Building_a_Calculator" class="nav-link">Project Time Building a Calculator</a>
             </li>
         </ul>
     </nav>
     <main id="main-doc">
         <section class="main-section" id="Introduction">
             <header>Introduction</header>
-            <p></p>
-            <code></code>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <p>
+                <li class="code_description">C is one of the oldest programing languages around.</li>
+                <li class="code_description">A lot of Modern Programming languages are actually based off of C.</li>
+                <li class="code_description">This Document will give you the basics of C programming so you can write
+                    your own C programns.</li>
+                <li class="code_description">You will need a complier for you C programs to work, I prefer using Code
+                    blocks as it is very user friendly.</li>
+                <li class="code_description">You can download it
+                    <a href="http://www.codeblocks.org/" alt="link to code blocks website">here</a>.</li>
+            </p>
         </section>
         <section class="main-section" id="Hello_World">
             <header>Hello World</header>
@@ -75,6 +78,7 @@
         <section class="main-section" id="Working_With_Numbers">
             <header>Working With Numbers</header>
             <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Comments">
             <header>Comments</header>
@@ -83,57 +87,87 @@
         <section class="main-section" id="Constants">
             <header>Constants</header>
             <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Getting_User_Input">
             <header>Getting User Input</header>
             <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Arrays">
             <header>Arrays</header>
             <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Functions">
             <header>Functions</header>
             <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Return_Statements">
-            <header>Return Statments</header>
+            <header>Return Statements</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="If_Statements">
-            <header>If Statments</header>
+            <header>If Statements</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Switch_Statements">
-            <header>Switch Statments</header>
+            <header>Switch Statements</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Structs">
             <header>Structs</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="While_Loops">
             <header>While Loops</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="For_Loops">
             <header>For Loops</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="2D_Arrays_&_Nested_Loops">
             <header>2D Arrays & Nested Loops</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Memory_Addresses">
             <header>Memory Addresses</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Pointers">
             <header>Pointers</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Dereferencing_Pointers">
             <header>Dereferencing Pointers</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Writing_Files">
             <header>Writing Files</header>
+            <p></p>
+            <code></code>
         </section>
         <section class="main-section" id="Reading_Files">
             <header>Reading Files</header>
+            <p></p>
+            <code></code>
         </section>
-        <section class="main-section" id="Building_a_Calculator">
-            <header>Building a Calculator</header>
+        <section class="main-section" id="Project_Time_Building_a_Calculator">
+            <header>Project Time Building a Calculator</header>
+            <p></p>
+            <code></code>
         </section>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js">
