--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <li>C is one of the oldest programing languages around.</li>
                 <li>C Programming can be used to do all sorts of things, graphics, game
                     programming, gpu programming, computer networking, and many more.</li>
-                <li> You will need a complier for you C programs to work, I prefer using Code.</li>
-                <li>blocks as it is very user friendly.</li>
+                <li> You will need a complier for you C programs to work, I prefer using Code blocks as it is very user
+                    friendly.</li>
                 </span>
             </ul>
             <p class="code_description">You can download it
